--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,8 @@ button:focus,
  *-------------------*/
 
 .jumbotron {
-    background            : url("../img/img-jumbotron-bg.jpg");
+    /*background            : url("../img/img-jumbotron-bg.jpg");*/
+    background            : url("../img/crazyBackground.jpg");
     background-size       : cover;
     padding               : 0;
     margin                : 0;
