--- a/css/style.css
+++ b/css/style.css
@@ -789,3 +789,9 @@ button:focus,
 .ircscseDownloadBtnBlack {
     color: black;
 }
+
+.orgComMemPicture {
+    width: 50%;
+    padding-top: 5px;
+    padding-left: 25px;
+}
