--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ Author: uiCookies.com
 # -------------------------------------------------------------------*/
 
 /*keep navbar collapsed*/
-@media (max-width: 2000px) {
+/*@media (max-width: 2000px) {
     .navbar-header {
         float: none;
     }
@@ -50,7 +50,6 @@ Author: uiCookies.com
     .navbar-collapse {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,1);
-        /*margin-top : 10px;*/
         background: #fff;
         color: black;
     }
@@ -75,7 +74,7 @@ Author: uiCookies.com
     .collapse.in{
         display:block !important;
     }
-}
+}*/
 
 body {
     font-family : 'Roboto', sans-serif;
@@ -329,18 +328,18 @@ button:focus,
     }
 
 .main-menu .nav li a {
-    /*color       : #ffffff;*/
-    color: black;
+    color       : #ffffff;
+    /*color: black;*/
     font-weight : 500;
     padding     : 15px 0 15px 30px;
-    text-align: center;
+    /*text-align: center;
     border-top: 2px solid white;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid white;*/
     }
-.main-menu .nav li a:hover {
+/*.main-menu .nav li a:hover {
     border-top: 2px solid #fd367e;
     border-bottom: 2px solid #fd367e;
-}
+}*/
 
 .main-menu .nav li a:hover,
 .main-menu .nav li.active a {
@@ -718,6 +717,12 @@ button:focus,
     margin-bottom : 100px;
     }
 
+#googleMapHotel {
+    height        : 350px;
+    border        : 5px solid #ffffff;
+    /*margin-bottom : 100px;*/
+    }
+
 /* ---------------------------
  * Subscribe Form
  * --------------------------- */
@@ -857,4 +862,17 @@ button:focus,
     color: #fd367e;
     margin-bottom: -40px;
     font-size: 110%;
+}
+
+hr.fadeaside {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+.bgimage {
+   background-image: url("\img\crazyBackground.jpg");
+   /*background-size: cover;*/
+   /*background-color: red;*/
+   /*background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));*/
 }
